can add h1 through h6, head is for title, CSS, info for search or browser, body is for all the visible content. strong is bold, emphasis is italics, br is for break

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <h1>
+      <strong> hello world.</strong>
+      <br><em> I'm coming for you.</em>
+    </h1>
+    <h6></h6>
   </head>
   <body>
   </body>
