--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <h1>
-      <strong> hello world.</strong>
-      <br><em> I'm coming for you.</em>
-    </h1>
-    <h6></h6>
+    <title>Regan's Site</title>
   </head>
   <body>
+    <h1>My first blog post</h1>
+    <h2>This is my first blog post</h2>
+    <h2>HTML is amazing!</h2>
   </body>
 </html>
