added external link to O's site and internal link to picture in file folder. img has no closing tag. a has href attribute and target attribute to open a new page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       </p>
     
       <img src="bug.JPG" alt="microscopic view of bug">
+    
+      <a href="http://welddonewelding.org" target="_blank">Oliver's Welding</a>
+      <a href="green.JPG" target="_blank">GREEN GRASS</a>
     <h2>HTML is amazing!</h2>
       <p>Poetry, in a general sense, may be defined to be “the expression of the imagination”: and poetry is connate with the origin of man. Man is an instrument over which a series of external and internal impressions are driven, like the alternations of an ever-changing wind over an Æolian lyre, which move it by their motion to ever-changing melody. But there is a principle within the human being, and perhaps within all sentient beings, which acts otherwise than in the lyre, and produces not melody alone, but harmony, by an internal adjustment of the sounds or motions thus excited to the impressions which excite them. It is as if the lyre could accommodate its chords to the motions of that which strikes them, in a determined proportion of sound; even as the musician can accommodate his voice to the sound of the lyre. A child at play by itself will express its delight by its voice and motions; and every inflexion of tone and every gesture will bear exact relation to a corresponding antitype in the pleasurable impressions which awakened it; it will be the reflected image of that impression; and as the lyre trembles and sounds after the wind has died away, so the child seeks, by prolonging in its voice and motions the duration of the effect, to prolong also a consciousness of the cause. In relation to the objects which delight a child these expressions are what poetry is to higher objects.
       </p>
