changed color of divs to see separation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="other-post">
       Filler Words for Other Post Section
       </div>
-      <div class="author-post"> 
+      <div class="author-box"> 
         <img src="author.jpeg" alt="photo of author">
         <p class="author-text">Regan Layman
         </p>
