--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <div class="other-post">
       Filler Words for Other Post Section
       </div>
+      
+      <div class="clearfix"></div>
+      
       <div class="author-box"> 
         <img src="author.jpeg" alt="photo of author">
         <p class="author-text">Regan Layman
