--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
           </p>
       </div>
       <div class="other-post">
-      Filler Words for Other Post Section
+          <div class="other">
+            The first other blog post
+          </div>
+          <div class="other">
+            The second other blog post
+          </div>
+          <div class="other">
+            The third other blog post
+          </div>
       </div>
       
       <div class="clearfix"></div>
