added new p under first heading for date, class date, made it's position absolute and the blog-post's relative, 0 pixels between date and top and right margin to get it into the corner. no formatting yet.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="container">
       <div class="blog-post">
         <h1>My first blog post</h1>
+        <p class="date">March 11, 2018</p>
         <h2>This is my first blog post</h2>
           <p class="main-text"> ACCORDING to one mode of regarding those two classes of mental action, which are called reason and imagination, the former may be considered as mind contemplating the relations borne by one thought to another, however produced, and the latter, as mind acting upon those thoughts so as to color them with its own light, and composing from them, as from elements, other thoughts, each containing within itself the principle of its own integrity. The one is the [Greek], or the principle of synthesis, and has for its objects those forms which are common to universal nature and existence itself; the other is the [Greek], or principle of analysis, and its action regards the relations of things simply as relations; considering thoughts, not in their integral unity, but as the algebraical representations which conduct to certain general results. Reason is the enumeration of qualities already known; imagination is the perception of the value of those qualities, both separately and as a whole. Reason respects the differences, and imagination the similitudes of things. Reason is to imagination as the instrument to the agent, as the body to the spirit, as the shadow to the substance.
           </p>
